--- a/project/css/index.css
+++ b/project/css/index.css
@@ -188,7 +188,7 @@ canvas {
     width: 100%;
     height: 100vh;
     background-color: #b61924;
-    background-image: url("./imgs/torre3.jpg");
+    background-image: url("../imgs/torre3.jpg");
     background-repeat: no-repeat;
     background-size: cover;
     background-position: 50% 50%;
