--- a/project/css/amenidades.css
+++ b/project/css/amenidades.css
@@ -5,10 +5,6 @@
     transition: all .2s linear;
 }
 
-
-/* Header */
-
-
 /* Header */
 
 .logo-2 {
@@ -131,7 +127,7 @@ a::after {
     font-weight: bold;
 }
 
-.txt-box .parrafo {
+.txt-box .paragraph {
     font-size: 22px !important;
     font-weight: lighter;
 }
@@ -353,6 +349,7 @@ svg {
     .a::after {
         bottom: 17px;
     }
+
     .b::after {
         bottom: 17px;
     }
