--- a/project/css/apartamentos.css
+++ b/project/css/apartamentos.css
@@ -143,8 +143,31 @@ hr {
     font-weight: bold;
 }
 
-.txt-box .parrafo {
+.title {
+    font-size: 50px !important;
+    font-weight: bold;
+}
+
+.txt-box .paragraph {
     font-size: 22px !important;
+    font-weight: lighter;
+}
+
+.item .tl {
+    font-family: "Gibson", sans-serif;
+    font-size: 21px !important;
+    font-weight: lighter;
+}
+
+.item .tb {
+    font-family: "Gibson", sans-serif;
+    font-size: 21px !important;
+    font-weight: bold;
+}
+
+.tl {
+    font-family: "Gibson", sans-serif;
+    font-size: 21px !important;
     font-weight: lighter;
 }
 
@@ -336,13 +359,12 @@ svg {
 }
 
 .item {
+    margin: 20px 0;
     background: #fff;
-    border: 1px solid #eee;
-    border-color: #000;
+    border: 1px solid #d2d2d2;
     padding: 15px;
-    /*cursores web: https://www.w3schools.com/cssref/pr_class_cursor.asp*/
-    /*permite mover los recuadros*/
     cursor: move;
+    box-shadow: 0px 10px 15px -3px rgba(0, 0, 0, 0.1);
 }
 
 .item h3 {
