--- a/project/css/contacto.css
+++ b/project/css/contacto.css
@@ -139,7 +139,7 @@ hr {
     font-weight: bold;
 }
 
-.txt-box .parrafo {
+.txt-box .paragraph {
     font-size: 22px !important;
     font-weight: lighter;
 }
