--- a/project/css/home.css
+++ b/project/css/home.css
@@ -144,7 +144,7 @@ hr {
 
 .txt-box p {
     font-family: "Gibson", sans-serif;
-    font-weight: lighter;
+    font-weight: normal;
     font-size: 25px !important;
 }
 
@@ -336,24 +336,47 @@ svg {
     .title {
         font-size: 60px !important;
     }
+
+    .sectionTitle {
+        font-size: 60px !important;
+    }
+
+    .sectionTitle2 {
+        font-size: 60px !important;
+    }
+
+    .sectionTitle3 {
+        font-size: 60px !important;
+    }
+
+    .sectionTitle4 {
+        font-size: 60px !important;
+    }
+
     .banner {
         background-size: cover;
     }
+
     .container-fluid4 {
         height: 550px;
     }
+
     .logo-1 {
         display: none;
     }
+
     .lang-selector {
         display: none;
     }
+
     .logo-2 {
         display: block;
     }
+
     .a::after {
         bottom: 17px;
     }
+
     .b::after {
         bottom: 17px;
     }
@@ -366,6 +389,7 @@ svg {
     0% {
         background-size: 110% 110%;
     }
+
     100% {
         background-size: 100% 100%;
     }
@@ -375,6 +399,7 @@ svg {
     0% {
         background-position: 0 -1880px;
     }
+
     100% {
         background-position: 0 0;
     }
